# antsart

./: .nbattrs  FirstPromiser.java  PromisedLand-JS.html  Promiser.java  README.md  index.html  promisers.js
js-only/: index.html  promisers.js
original/: .project  ColoredPromiser.java  FirstPromiser.java  PromisedLand.html  PromisedLand.java  SecondPromiser.java  SimpleFollowers.java
pkg/: README.md  package.json  promisers_wasm.d.ts  promisers_wasm_bg.wasm  promisers_wasm_bg.wasm.d.ts
src/: lib.rs
wasm/: Cargo.toml  index.html
wasm/pkg/: promisers_wasm.js
wasm/src/: promiser.rs  simulation.rs
