[package]
name = "promisers-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "Event",
  "MouseEvent",
  "WheelEvent",
  "KeyboardEvent",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
